# teachmehuman

./: README.md  pyproject.toml
examples/: get_screen_shot.py  travian_night_1.py
teachmehuman/bots/hours/: register_hours.py
teachmehuman/bots/travian/atomics/: __init__.py  build_time_left.py  go_to_buildings.py  go_to_buldings.py  go_to_resources.py  select_building_1.py  select_building_2.py  select_building_3.py  select_building_4.py  select_building_5.py  select_building_6.py  select_field_1.py  select_field_10.py  select_field_11.py  select_field_12.py  select_field_2.py  select_field_3.py  select_field_4.py  select_field_5.py  select_field_6.py  select_field_7.py  select_field_8.py  select_field_9.py  select_wall.py  upgrade_baracks.py  upgrade_crop.py  upgrade_main_building.py  upgrade_wall.py
teachmehuman/bots/travian/night_automation/: night_1.py
teachmehuman/scripts/: convert.py  record.py
teachmehuman/utils/: jump_to_window_1.py  recording_manager.py
